Document research-pack viewers in README, changelog, and reference.
Catalog all 156 tools on the hub-aligned README, note hub search, and add
Accepts/Limits/Features/Exports for the new viewers.